libs/modkit-db-macros/tests/ui/err_conflicting_resource.stderr
error: secure: specify either `resource_col` or `no_resource`, not both
 --> tests/ui/err_conflicting_resource.rs:9:5
  |
9 |     no_resource,
  |     ^^^^^^^^^^^
